# PyLedger

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
dev-docs/: SYNC.md  api-spec.md  architecture.md  hledger-compatibility.md
dev-docs/changelog/: MILESTONE-0.md  MILESTONE-1.md  MILESTONE-2.md
docs/: api-spec.md  getting-started.md  hledger-compatibility.md  journal-format.md  python-api.md  usage.md
docs/changelog/: MILESTONE-0.md
knowledge/: ANTIPATTERNS.md  DECISIONS.md  DOMAIN_RULES.md  EDGE_CASES.md
pyLedger/: __init__.py  __main__.py  checks.py  cli.py  loader.py  models.py  parser.py  reports.py
tests/: README.md  test_checks.py  test_cli.py  test_loader.py  test_parser.py  test_reports.py
tests/fixtures/: assertions_fail.journal  assertions_pass.journal  circular_a.journal  circular_b.journal  filtered.journal  glob_1.journal  glob_2.journal  included.journal  multicommodity.journal  nested_a.journal  nested_b.journal  nested_c.journal  root_with_glob.journal  root_with_include.journal  sample.journal  strict_missing_accounts.journal  strict_missing_commodity.journal  strict_valid.journal
tests/test_checks/: test_checks.py
tests/test_cli/: test_cli.py
tests/test_directives/: test_directives.py
tests/test_loader/: test_loader.py
tests/test_parser/: test_parser.py
