[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "PyLedger"
version = "0.1.0"
description = "A Python implementation of the hledger plain-text accounting tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
PyLedger = "PyLedger.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["PyLedger*"]
