[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyLedger"
version = "0.1.1"
description = "A Python implementation of the hledger plain-text accounting tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
PyLedger = "PyLedger.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["PyLedger*"]
